--- a/frontend/src/main/resources/templates/profile-other.html
+++ b/frontend/src/main/resources/templates/profile-other.html
@@ -31,7 +31,7 @@
                                     <tr>
                                         <td class="form-info-text" align="right">Phone</td>
                                         <td class="second-column">
-                                            <input class="custom-settings-input" th:field="*{phone}" name="phone" placeholder="Phone">
+                                            <input class="custom-settings-input" th:field="*{phone}" name="phone">
                                         </td>
                                     </tr>
 
@@ -40,16 +40,16 @@
                                     <tr>
                                         <td class="form-info-text" align="right">Bio</td>
                                         <td class="second-column">
-                                            <input class="custom-settings-input" th:field="*{bio}" name="bio" placeholder="Bio">
+                                            <input class="custom-settings-input" th:field="*{bio}" name="bio">
                                         </td>
                                     </tr>
 
                                     <tr class="table-row-spacing"></tr>
 
                                     <tr>
-                                        <td class="form-info-text" align="right">Link</td>
+                                        <td class="form-info-text" align="right">Your Website</td>
                                         <td class="second-column">
-                                            <input class="custom-settings-input" th:field="*{link}" name="link" placeholder="Link">
+                                            <input class="custom-settings-input" th:field="*{link}" name="link">
                                         </td>
                                     </tr>
 
