--- a/frontend/src/main/resources/templates/profile-password.html
+++ b/frontend/src/main/resources/templates/profile-password.html
@@ -29,9 +29,9 @@
                                 <table>
                                     <tbody>
                                     <tr>
-                                        <td class="form-info-text" align="right">Password</td>
+                                        <td class="form-info-text" align="right">New Password</td>
                                         <td class="second-column">
-                                            <input class="custom-settings-input" type="password" th:field="*{password}" name="password" placeholder="New Password">
+                                            <input class="custom-settings-input" type="password" th:field="*{password}" name="password">
                                         </td>
                                     </tr>
 
