Password validation for editing implemented

--- a/frontend/src/main/resources/templates/profile-password.html
+++ b/frontend/src/main/resources/templates/profile-password.html
@@ -25,7 +25,7 @@
 
                         <div class="content-area">
 
-                            <form th:action="@{/profilepasswordsave}" method="post" th:object="${profile}">
+                            <form th:action="@{/profilepasswordsave}" method="post" th:object="${passwordEditUser}">
                                 <table>
                                     <tbody>
                                     <tr>
@@ -34,7 +34,12 @@
                                             <input class="custom-settings-input" type="password" th:field="*{password}" name="password">
                                         </td>
                                     </tr>
-
+                                    <tr th:if="${#fields.hasErrors('password')}">
+                                        <td></td>
+                                        <td class="second-column">
+                                            <div class="edit-validation" th:errors="*{password}"></div>
+                                        </td>
+                                    </tr>
                                     <tr class="table-row-spacing"></tr>
 
                                     <tr>
