--- a/frontend/src/main/resources/templates/fragment/settings-sidebar.html
+++ b/frontend/src/main/resources/templates/fragment/settings-sidebar.html
@@ -5,8 +5,8 @@
 
             <img th:src="@{'/static/images/profile/' + ${profile.profileImageName} }" class="settings-profile-box-pic">
 
-            <div style="background-color: #1DA1F2; width: 100%; height: 60.5%">
-
+            <div class="profile-box-top-box-settings">
+                <img class="follow-box-banner-img" th:src="@{'/static/images/banner/' + ${profile.bannerImageName} }" alt="">
             </div>
 
             <div style="background-color: white; width: 100%; height: 39.5%">
