--- a/frontend/src/main/resources/templates/admin-page.html
+++ b/frontend/src/main/resources/templates/admin-page.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
     <h1>Welcome to admin page</h1>
+
+    <div th:each="user : ${users}">
+        <p th:text="${user.name}"></p>
+    </div>
+
+
+    <form th:action="@{/logout}" method="post">
+        <button type="submit">Log out</button>
+    </form>
+
 </body>
 </html>
