Updated admin password change card

--- a/frontend/src/main/resources/templates/admin-page-password.html
+++ b/frontend/src/main/resources/templates/admin-page-password.html
@@ -7,7 +7,7 @@
     <body>
         <div th:replace="fragment/admin-menu :: div"></div>
         <div class="container">
-            <div class="col-sm-5 mx-auto">
+            <div class="col-sm-4 mx-auto">
 
                 <br>
                 <h4>Update Password</h4>
@@ -17,16 +17,16 @@
                     <table>
                         <tbody>
                         <tr>
-                            <td style="width: 8.2em;" class="form-info-text">
-                                <span>Name:</span>
+                            <td style="width: 8.2em;" class="form-info-text" align="right">
+                                <span style="padding-right: 1em">Name</span>
                             </td>
                             <td class="form-info-text">
                                 <span th:text="${user.name}"></span>
                             </td>
                         </tr>
                         <tr>
-                            <td style="width: 6em;" class="form-info-text">
-                                <span>Username:</span>
+                            <td style="width: 6em;" class="form-info-text" align="right">
+                                <span style="padding-right: 1em">Username</span>
                             </td>
                             <td class="form-info-text">
                                 <span th:text=" '@' + ${user.userName}"></span>
