--- a/frontend/src/main/resources/templates/fragment/admin-menu.html
+++ b/frontend/src/main/resources/templates/fragment/admin-menu.html
@@ -8,7 +8,7 @@
 
             <!-- Twitter Bird -->
             <div class="navbar-brand">
-                <a th:href="@{/}"><i class="fab fa-twitter bird-signup"></i></a>
+                <a th:href="@{/admin}"><i class="fab fa-twitter bird-signup"></i></a>
             </div>
 
             <!-- Navbar Right Box -->
