Updated URL check for admin and user

--- a/frontend/src/main/resources/templates/fragment/admin-menu.html
+++ b/frontend/src/main/resources/templates/fragment/admin-menu.html
@@ -14,7 +14,7 @@
             <!-- Navbar Right Box -->
             <div class="navbar-right-box">
                 <form th:action="@{/logout}" method="post">
-                    <button class="adminbutton white-button" type="submit">Log out</button>
+                    <button class="adminbutton white-button" type="submit">Exit Admin Page</button>
                 </form>
             </div>
 
