--- a/frontend/src/main/resources/templates/search-results.html
+++ b/frontend/src/main/resources/templates/search-results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
-    <title th:text=" 'News about ' + ${query} + ' on Twitter' "></title>
+    <title th:text="${query} + ' - Twitter Search' "></title>
     <head th:replace="fragment/header :: head"></head>
 
     <body>
