--- a/frontend/src/main/resources/static/css/style.css
+++ b/frontend/src/main/resources/static/css/style.css
@@ -288,7 +288,7 @@ button:focus {
 /************ NAVBAR ADMIN ************/
 
 .navbarGradient-admin {
-    background-image: linear-gradient(to right, #179bf2, #08d1f1);
+    background-image: linear-gradient(to right, #179bf2, #08bff1);
     opacity: 1.0;
 }
 
