--- a/frontend/src/main/resources/templates/fragment/feed-tweets.html
+++ b/frontend/src/main/resources/templates/fragment/feed-tweets.html
@@ -90,7 +90,7 @@
                         <tr>
                             <td class="interaction-item">
                                 <img class="icon" th:src="@{'/assets/comment.png'}">
-                                <span class="interaction-text">42</span>
+                                <span class="interaction-text"></span>
                             </td>
                             <td class="interaction-item">
 
@@ -101,7 +101,7 @@
                                     <a class="no-text-decoration" href="#" onclick="this.parentNode.submit();">
                                         <div class="interaction-div">
                                             <img class="retweet-icon" th:src="@{'/assets/gray-retweet.svg'}">
-                                            <span class="interaction-text">0</span>
+                                            <span class="interaction-text"></span>
                                         </div>
 
                                     </a>
@@ -111,7 +111,7 @@
                             </td>
                             <td class="interaction-item">
                                 <img class="icon" th:src="@{'/assets/heart.png'}">
-                                <span class="interaction-text">89</span>
+                                <span class="interaction-text"></span>
                             </td>
                         </tr>
                         </tbody>
@@ -216,7 +216,7 @@
                         <tr>
                             <td class="interaction-item">
                                 <img class="icon" th:src="@{'/assets/comment.png'}">
-                                <span class="interaction-text">42</span>
+                                <span class="interaction-text"></span>
                             </td>
                             <td class="interaction-item">
 
@@ -228,7 +228,7 @@
                                     <a class="no-text-decoration" href="#" onclick="this.parentNode.submit();">
                                         <div class="interaction-div">
                                             <img class="retweet-icon" th:src="@{'/assets/gray-retweet.svg'}">
-                                            <span class="interaction-text">0</span>
+                                            <span class="interaction-text"></span>
                                         </div>
 
                                     </a>
@@ -238,7 +238,7 @@
                             </td>
                             <td class="interaction-item">
                                 <img class="icon" th:src="@{'/assets/heart.png'}">
-                                <span class="interaction-text">89</span>
+                                <span class="interaction-text"></span>
                             </td>
                         </tr>
                         </tbody>
