--- a/frontend/src/main/resources/templates/frontpage.html
+++ b/frontend/src/main/resources/templates/frontpage.html
@@ -5,109 +5,15 @@
     <head th:replace="fragment/header :: head"></head>
 
     <body>
-    <div th:replace="fragment/menu :: div"></div>
-        <div class="container">
+        <div th:replace="fragment/not-logged-in-menu :: div"></div>
+        <div class="container" style="margin-top: 3.5em">
 
             <div class="row justify-content-center">
 
                 <div class="col-6">
 
-                    <!--------- TWEET FEED --------->
-                    <div th:each="t : ${feedTweets}">
-
-                        <!--------- NEW TWEET --------->
-                        <div th:if="${t.newTweet == null}">
-                            <div class="tweetbox">
-
-                                <div class="tweetbox-image-box">
-                                    <img class="tweet-profile-pic" th:src="@{'/static/images/profile/' + ${t.profileImageName} }" alt="">
-                                </div>
-
-                                <div class="tweetbox-content">
-                                    <div class="name-field">
-
-                                        <a th:href="@{'/profile/' + ${t.user_id} }">
-                                            <span class="name" th:text="${t.name}"></span>
-                                            <span class="grey-text" th:text="' @' + ${t.userName}"></span>
-                                        </a>
-
-
-                                        <span class="grey-text">⋅</span>
-                                        <span class="grey-text" th:text="${t.dateTime}"></span>
-                                        <br>
-                                        <span class="tweet-message" th:text="${t.message}"></span>
-                                    </div>
-
-                                    <img th:if="${t.imageName != null}" class="tweet-pic" th:src="@{'/static/images/tweet/' + ${t.imageName} }" alt="">
-
-                                    <div class="interaction-field">
-
-
-                                    </div>
-
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <!--
-
-                        <a style="font-size: 0.9em" th:href="@{'/deleteTweet/' + ${t.id} }">Delete</a>
-
-                        <a style="font-size: 0.9em" href="#">Like</a>
-
-                        <a style="font-size: 0.9em" href="#">Share</a>
-
-                        -->
-
-                        <!--------- RETWEET --------->
-                        <div th:if="${t.newTweet != null}">
-
-                            <div class="tweetbox">
-
-                                <div class="retweet-box">
-                                    <a th:href="@{'/profile/' + ${t.user_id} }">
-                                        <img class="user-retweet-icon" th:src="@{'/assets/gray-retweet.svg'}">
-                                        <span class="retweeted-text" th:text="${t.name} + ' Retweeted' "></span>
-                                    </a>
-                                </div>
-
-                                <div class="tweetbox-image-box">
-                                    <img class="tweet-profile-pic" th:src="@{'/static/images/profile/' + ${t.newTweet.profileImageName} }" alt="">
-                                </div>
-
-                                <div class="tweetbox-content">
-                                    <div class="name-field">
-                                        <a th:href="@{'/profile/' + ${t.newTweet.user_id} }">
-                                            <span class="name" th:text="${t.newTweet.name}"></span>
-                                            <span class="grey-text" th:text="' @' + ${t.newTweet.userName}"></span>
-                                        </a>
-                                        <span class="grey-text">⋅</span>
-                                        <span class="grey-text" th:text="${t.newTweet.dateTime}"></span>
-                                        <br>
-                                        <span class="tweet-message" th:text="${t.newTweet.message}"></span>
-                                    </div>
-
-                                    <img th:if="${t.newTweet.imageName != null}" class="tweet-pic" th:src="@{'/static/images/tweet/' + ${t.newTweet.imageName} }" alt="">
-
-                                    <div class="interaction-field">
-
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                            <!--
-                            <a style="font-size: 0.9em" th:href="@{'/deleteRetweet/' + ${t.newTweet.id} }">Undo retweet</a>
-
-                            <a style="font-size: 0.9em" href="#">Like</a>
-                            <a style="font-size: 0.9em" href="#">Share</a>
-                            -->
-
-                        </div>
-
-                    </div>
+                    <!--------- TWEETS --------->
+                    <div th:replace="fragment/feed-tweets :: div"></div>
 
                 </div>
 
