--- a/frontend/src/main/resources/templates/login.html
+++ b/frontend/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 
     <body style="height: 80%">
 
-        <!--<div th:replace="fragment/menu :: div"></div>-->
+            <div th:replace="fragment/not-logged-in-menu :: div"></div>
 
             <div class="container" style="height: 80%;position: relative">
 
