--- a/frontend/src/main/resources/templates/fragment/not-logged-in-menu.html
+++ b/frontend/src/main/resources/templates/fragment/not-logged-in-menu.html
@@ -14,6 +14,7 @@
             <!-- Navbar Right Box -->
             <div class="navbar-right-box">
 
+                <a th:href="@{/login}">Log in/Sign up</a>
             </div>
 
         </div>
